# og-emulator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile.docker  README.md  __init__.py  __main__.py  compose.yaml  emulator.Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
config/: __init__.py  config.json  default_config.json
core/: config.py  manager.py  ssh_server.py
devices/: __init__.py  base.py  cisco.py  factory.py  garderos.py  opengear.py
docs/: DEMO.md
examples/: README.md  paramiko_example.py
scripts/: run-ssh-emulator.py
tests/: __init__.py  conftest.py  test_config.py  test_emulator.py  test_script.py
utils/: __init__.py  config.py  logging.py
