[metadata]
description-file = README.md
license_files = LICENSE

[bdist_wheel]
universal = 1

[coverage:run]
source = emulator
omit =
    */tests/*
    */__pycache__/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == '__main__':
    pass

[flake8]
max-line-length = 88
exclude = .git,__pycache__,.venv,venv,build,dist
select = E9,F63,F7,F82  # These are the warnings we care about
ignore = E203, E501, W503  # Black handles these
